app/styles/_nav.scss
.navbar-fixed-top {
  box-shadow: -10px -10px 10px 10px #767676;
  min-height: 56px;
}

html .navbar, .navbar-fixed-top {
  z-index: 1001;
}

.navbar {
  z-index: 1001;
  border: 0;
}

.nav-tabs a:focus, .nav-tabs a.focus, .nav-tabs a:active:focus, .nav-tabs a:active.focus, .nav-tabs.active a:focus, .nav-tabs a.active.focus, body a:focus {
  outline: none;
}

a.navbar-brand {
  font-size: 20px;
  outline: none;

  span {
    font-size: 30px;
    vertical-align: middle;
    margin-right: 10px;
  }
}

.nav-left {

  padding-top: 8px;

  span {
    font-size: 30px;
    margin-top: 3px;
  }

  li {
    margin-right: 2em;
    font-size: 24px;
  }
}

.settings-navbar {
  a {
    background: none;
    border: none;
    color: #fff;
    &:hover {
      background: none;
      color: #7cc143;
    }
  }
}

#left-navigation {

  .navbar {
    position: fixed;
    left: 0;
    top: 56px;
    bottom: 0;
    width: 56px;
    height: 100%;
    z-index: 1000;
    padding: 0;
    border-top: 3px solid #28A4DD;
    border-radius: 0;
    box-shadow: none;
    background: #555B5C;

    ul {
      width: 56px;

    }

    li {
      width: 56px;
      height: 56px;
      list-style: none;
      left: 0;
      margin-top: 10px;
      margin-bottom: 20px;
      text-align: center;

    }

    li:hover > .left-nav-option {
      opacity: 1;
      min-width: 175px;
      max-width: 325px;

    }
    li a {
      width: 56px;
      height: 56px;
      list-style: none;
      left: 0;
      margin-top: 10px;
      margin-bottom: 20px;
      text-align: center;
      text-decoration: none;
    }

    li a:hover > .left-nav-option {
      opacity: 1;
      min-width: 175px;
      max-width: 325px;
    }

    .left-nav-option {
      width: 100%;
      min-width: 0;
      max-width: 0;
      height: 50px;
      background: #444;
      border: 1px solid #bce4f0;
      opacity: 0;
      position: relative;
      top: -48px;
      border-radius: 5px;
      left: 0;
      text-align: left;
      overflow: hidden;
      -webkit-transition: all .2s ease-in-out;
      -moz-transition: all .2s ease-in-out;
      -ms-transition: all .2s ease-in-out;
      -o-transition: all .2s ease-in-out;
      transition: all .2s ease-in-out;

      i {
        color: #bce4f0;
        vertical-align: middle;
        display: inline-block;
        height: 50px;
      }

      p {
        color: #bce4f0;
        font-weight: 100;
        font-size: 16px;
        display: inline-block;
        vertical-align: middle;
      }

    }

    .left-nav-option.lg {

      width: 375px;

    }

    .active {

      i {
        color: #2aa1db;
      }

    }

    i {
      font-size: 42px;
      color: #BBB;
      margin: 3px 6px;
      padding: 0;
      opacity: 1;
    }

  }

}

#left-navigation-epos-configuration {

  .navbar {
    position: fixed;
    left: 0px;
    top: 56px;
    bottom: 0;
    width:320px;
    height: 100%;
    z-index: 1000;
    padding: 0;
    border-top: 3px solid #28A4DD;
    border-radius: 0;
    box-shadow: none;
    background: #555B5C;

    ul {
      margin-left:10px;

    }

    li {
      height: 56px;
      list-style: none;
      left: 0px;
      margin-top: 10px;
      margin-bottom: 20px;
    }

    li a {
      height: 56px;
      list-style: none;
      left: 0;
      margin-top: 10px;
      margin-bottom: 20px;
      text-align: center;
      text-decoration: none;
    }

    .left-nav-option {
      width: 90%;
      height: 50px;
      background: #444;
      border: 1px solid #bce4f0;
      opacity: 1;
      position: relative;
      top: -48px;
      border-radius: 5px;
      left: 10px;
      text-align: left;
      overflow: hidden;

      i {
        color: #bce4f0;
        vertical-align: middle;
        display: inline-block;
        height: 50px;
      }

      p {
        color: #bce4f0;
        font-weight: 100;
        font-size: 16px;
        display: inline-block;
        vertical-align: middle;
      }

    }

    .left-nav-option.lg {
    }

    .active {

      i {
        color: #2aa1db;
      }

    }

    .product-version {
      margin-left:10px;
      margin-top:20px;

      select {
        width:290px;
      }
    }

    i {
      font-size: 42px;
      color: #BBB;
      margin: 3px 6px;
      padding: 0;
      opacity: 1;
    }

  }

}

